@@ -1,3 +1,8 @@
+2005-11-11  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	PR target/24445
+	* gcc.dg/pr24445.c: New test.
+
 2005-11-10  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/24655
